# mcp-servers

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run-server-tests.yaml  run-server-tests.yml  test-brave-mcp.yaml  test-slack-mcp.yaml
servers/brave_search/: README.md  pyproject.toml
servers/brave_search/brave_search_mcp/: __main__.py  main.py  models.py
servers/brave_search/src/: main.py  models.py
servers/brave_search/tests/: test_brave_search.py
servers/harvest/: Makefile  README.md  pyproject.toml
servers/harvest/src/: __main__.py  server.py
servers/slack/: README.md  pyproject.toml
servers/slack/slack_mcp/: __main__.py  client.py  models.py  server.py
servers/slack/tests/: conftest.py  test_client.py  test_integration.py  test_server.py
src/: server.py
src/api/: __init__.py  clients.py  core.py  projects.py  reports.py  time_entries.py
tests/: conftest.py  test_harvest_api.py  test_mcp_tools.py
