[project]
name = "mcp-servers"
version = "0.1.0"
description = "A Collection of mcp servers."
authors = [
    {name = "Codify AG", email = "timo.weiser@codify.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4>=4.13.3",
    "mcp-servers-harvest",
    "mcp[cli]>=1.5.0",
]

[tool.uv.workspace]
members = ["servers/harvest", "servers/brave_search"]

[tool.uv.sources]
mcp-servers-harvest = { workspace = true }
