[project]
name = "mcp-servers"
version = "0.1.0"
description = "A Collection of mcp servers."
authors = [
    {name = "Codify AG", email = "timo.weiser@codify.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp-servers-harvest",
    "mcp-servers-brave-search
]

[tool.uv.workspace]
members = ["servers/harvest", "servers/brave_search"]

[tool.uv.sources]
mcp-servers-harvest = { workspace = true }
mcp-servers-brave-search = { workspace = true }

