[project]
name = "mcp-servers-harvest"
version = "0.1.0"
description = "Smart Harvest Tool for time tracking integration with Harvest API"
authors = [
    {name = "Codify AG", email = "timo.weiser@codify.ch"}
]
readme = "README.md"
license = {file = "../LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.20.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=0.950",
]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
